--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -11,11 +11,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def stats(x):\n",
+    "    \"Returns `mean` and `std` of a tensor\"\n",
+    "    return (x.mean(),x.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1280,  1.5717,  0.3614, -0.8175,  0.6591],\n",
+       "        [-0.4365,  0.9672,  0.6372, -0.3328,  0.2873],\n",
+       "        [ 0.6091, -1.0986, -0.2986,  2.1316,  0.3600],\n",
+       "        [ 1.2389, -0.5704, -1.2233,  0.5346,  1.6212]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = torch.randn((4,5))\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.3165), tensor(0.9192))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted 99_index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nbdev.export import *\n",
+    "notebook2script()"
    ]
   },
   {
@@ -42,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
