--- a/99_index.ipynb
+++ b/99_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-2.0679, -0.6089,  1.7901, -0.2009,  0.4901],\n",
-       "        [-1.0642,  0.5158, -2.6744, -0.3510, -1.2414],\n",
-       "        [-0.6167,  1.0207,  1.4046, -0.0592, -0.3948],\n",
-       "        [ 1.1623, -0.0118, -2.3024,  1.2643,  0.3542]])"
+       "tensor([[-0.6513,  0.1407, -0.3477, -2.7365,  0.4749],\n",
+       "        [-2.3768, -1.5826,  0.2480, -0.4415,  0.8221],\n",
+       "        [ 0.9084,  0.1103, -0.4796,  0.0892,  0.1005],\n",
+       "        [-1.0153, -0.8397,  0.9773,  0.4647,  2.3767]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,19 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'stats' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-83ea117c9182>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stats' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(tensor(-0.1879), tensor(1.1765))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
