--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -11,11 +11,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Core functions"
    ]
   },
   {
@@ -32,49 +48,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1280,  1.5717,  0.3614, -0.8175,  0.6591],\n",
-       "        [-0.4365,  0.9672,  0.6372, -0.3328,  0.2873],\n",
-       "        [ 0.6091, -1.0986, -0.2986,  2.1316,  0.3600],\n",
-       "        [ 1.2389, -0.5704, -1.2233,  0.5346,  1.6212]])"
+       "tensor([[ 0.3335, -0.2202, -0.6316, -0.2493,  2.0531],\n",
+       "        [-0.0111,  0.1033, -0.7185,  0.2561, -0.2887],\n",
+       "        [-0.2468, -0.2986,  0.5978,  1.7632,  1.1320],\n",
+       "        [ 0.8547,  1.2026,  0.3370, -1.1227, -1.0448],\n",
+       "        [-0.6678, -0.1541,  0.4889,  0.8541,  0.5132]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = torch.randn((4,5))\n",
+    "t = torch.randn((5,5))\n",
     "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.3165), tensor(0.9192))"
+       "(tensor(0.1934), tensor(0.8119))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -101,13 +109,6 @@
     "from nbdev.export import *\n",
     "notebook2script()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
