--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -106,9 +106,17 @@
     }
    ],
    "source": [
+    "#hide\n",
     "from nbdev.export import *\n",
     "notebook2script()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
