MNIST Initial commit

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,25 +43,25 @@
     "#export\n",
     "def stats(x):\n",
     "    \"Returns `mean` and `std` of a tensor\"\n",
-    "    return (x.mean(),x.std())"
+    "    return x.mean(),x.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.3335, -0.2202, -0.6316, -0.2493,  2.0531],\n",
-       "        [-0.0111,  0.1033, -0.7185,  0.2561, -0.2887],\n",
-       "        [-0.2468, -0.2986,  0.5978,  1.7632,  1.1320],\n",
-       "        [ 0.8547,  1.2026,  0.3370, -1.1227, -1.0448],\n",
-       "        [-0.6678, -0.1541,  0.4889,  0.8541,  0.5132]])"
+       "tensor([[ 1.0636,  0.6963, -2.0635,  0.2090,  0.3509],\n",
+       "        [-0.1821,  0.2098, -1.3676, -1.4209, -2.5511],\n",
+       "        [-0.9911,  0.2039, -0.9624, -1.2587, -0.3814],\n",
+       "        [-0.0240, -1.2503, -1.2545,  0.4914, -0.1319],\n",
+       "        [-0.0804, -1.8127,  0.6779,  0.4469, -0.1411]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,22 +73,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.1934), tensor(0.8119))"
+       "(tensor(-0.4610), tensor(0.9629))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "stats(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Log Softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def log_softmax(x):\n",
+    "    return x - x.exp().sum(-1).log().unsqueeze(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.9754, -1.3426, -4.1025, -1.8300, -1.6881],\n",
+       "        [-1.1533, -0.7614, -2.3388, -2.3922, -3.5223],\n",
+       "        [-2.0716, -0.8766, -2.0429, -2.3392, -1.4620],\n",
+       "        [-1.4249, -2.6513, -2.6554, -0.9095, -1.5328],\n",
+       "        [-1.7829, -3.5151, -1.0246, -1.2556, -1.8435]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_softmax(t)"
    ]
   },
   {
