--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -178,25 +178,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def plotdist(x):\n",
-    "    \"Plot distribution `x`\"\n",
+    "def plotdist(x,showsigmas=True):\n",
+    "    \"Plot distribution `x` with optional `showsigmas`\"\n",
     "    fig = plt.figure(figsize=(4,3))\n",
     "    m,s = x.mean(), x.std()\n",
     "    n,_,_ = plt.hist(x.reshape(-1),bins=100);\n",
     "    l = [i*s for i in (-3,-2,-1,1,2,3)] # three sigmas\n",
     "    l.append(m) # plus mean\n",
-    "    plt.vlines(l, 0, n.max(), color='white', alpha=0.2)\n",
+    "    if showsigmas: plt.vlines(l, 0, n.max(), color='white', alpha=0.2)\n",
     "    ax = plt.title(f'Mean = {round(float(m),3)}; $\\sigma$ = {round(float(s),3)}');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
