NLL, Accuracy and Error metrics added

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross Entropy Loss"
+    "## Cross Entropy Loss"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "def accuracy(pred,y):\n",
-    "    \"\"\n",
+    "    \"Accuracy metric\"\n",
     "    return (pred.argmax(dim=1) == y).float().mean()"
    ]
   },
@@ -173,7 +173,26 @@
    "outputs": [],
    "source": [
     "def error(pred,y):\n",
+    "    \"Error metric\"\n",
     "    return 1-accuracy(pred,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nll(pred,yb):\n",
+    "    \"Negative Log Likelihood Loss function\"\n",
+    "    return -pred[range(yb.shape[0]), yb].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting"
    ]
   },
   {
@@ -242,27 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -278,6 +277,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "from nbdev.export import *\n",
     "notebook2script()"
    ]
