--- a/01_mnist.ipynb
+++ b/01_mnist.ipynb
@@ -147,24 +147,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = nn.Sequential(\n",
+    "    nn.Flatten(-1),\n",
+    "    nn.Linear(100,50),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(50,10),\n",
+    "    nn.CrossEntropyLoss()\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Flatten()\n",
+       "  (1): Linear(in_features=100, out_features=50, bias=True)\n",
+       "  (2): ReLU()\n",
+       "  (3): Linear(in_features=50, out_features=10, bias=True)\n",
+       "  (4): CrossEntropyLoss()\n",
+       ")"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceDataLoader(dl=<torch.utils.data.dataloader.DataLoader object at 0x7f48dd463da0>, device=device(type='cpu'), tfms=[functools.partial(<function _normalize_batch at 0x7f487fd6e6a8>, mean=tensor([0.4850, 0.4560, 0.4060]), std=tensor([0.2290, 0.2240, 0.2250]), do_x=True, do_y=False)], collate_fn=<function data_collate at 0x7f4880b26620>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.train_dl."
+   ]
   },
   {
    "cell_type": "code",
