#export tag added where was missing

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -161,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def accuracy(pred,y):\n",
     "    \"Accuracy metric\"\n",
     "    return (pred.argmax(dim=1) == y).float().mean()"
@@ -172,6 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def error(pred,y):\n",
     "    \"Error metric\"\n",
     "    return 1-accuracy(pred,y)"
@@ -183,6 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def nll(pred,yb):\n",
     "    \"Negative Log Likelihood Loss function\"\n",
     "    return -pred[range(yb.shape[0]), yb].mean()"
